# iHostMC-public

./: .env.development  .env.example  .env.gh-secrets.example  .env.public.example  .env.test  .gitignore  .gitmodules  LAYOUT.md  README-PUBLIC-REPO.md  README.md  components.json  fix-cursor-remote-ssh.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tauri-dev.cmd  tsconfig.json  vite.config.js  vite.config.ts
.github/: SECRETS.md
backend/: .env.example  DEPLOY.md  package-lock.json  package.json
deploy/: .env.example  ecosystem.config.cjs  fix-website-chunks.md  fresh-deploy.sh  ihostmc-backend.service  ihostmc-website.service  refresh-website.sh  run-all.sh  sudoers-ihostmc-builder  transfer-to-server.sh  trigger-and-wait.sh
docs/: APP-DOMAIN-SETUP.md  ASSETS.md  BACKUP-CLOUD-HOW-IT-WORKS.md  BACKUP-ITERATIONS-DESIGN.md  BACKUP_UX.md  BILLING.md  BUILD-WINDOWS.md  COOKIE-AUTH-ANALYSIS.md  CURSOR-AUTO-DEPLOY-PROMPT.md  CURSOR-CONTINUE.md  CURSOR-DEPLOY.md  CURSOR-SERVER-DEBUG.md  CURSOR-SERVER-WORKFLOW.md  DNS-IHOST-ONE.md  GITHUB_OAUTH_PASTE.txt  GITHUB_SETUP.md  HTTPS-DUCKDNS.md  IHOSTMC-SNAPSHOT-FORMAT.md  LOGIN-AND-DATABASE.md  OAUTH-SETUP.md  PROMPT-BACKEND-TROUBLESHOOT-AND-SECURITY.md  PROMPT-BACKUP-SYNC-SERVER.md  PROMPT-CURSOR-WINDOWS-CATCH-UP.md  PROMPT-PUSH-AND-CONTINUE.md  PROMPT-SERVER-AFTER-PUSH.md  PROMPT-SERVER-UPDATE.md  PROMPT-WINDOWS-GIT-PULL-AND-AUTH-SETUP.md  PUBLIC-BUILD-AND-REPO.md  RESTORE_DB_PROMPT.md  SERVER-BACKUP-STORAGE.md  SERVER-BILLING-PROMPT.md  SERVER-DEPLOY.md  SERVER-DEPLOY.md.local  SERVER-FRPS-PROMPT.md  SERVER-HTTPS-DUCKDNS-PROMPT.md  SERVER-SETUP-PROMPT.md  SERVER-UPDATE-PROMPT.md  SERVER_SETUP_PROMPT.md  STRIPE-AND-TIER-TEST.md  TRANSFER-DATABASE-TO-SERVER.md  (+6 more)
scripts/: ensure-env.cjs  export-public-repo.cjs  gen-icon.cjs  gen-latest-json.cjs  kill-dev-port.cjs  (+8 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_control.html
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: ICON_PLACEHOLDER.txt  icon.icns
src-tauri/patches/dpi/: Cargo.toml
src-tauri/patches/dpi/src/: lib.rs
src-tauri/src/: commands.rs  dev_auth_server.rs  download.rs  java.rs  lib.rs  main.rs  process.rs  server.rs  slp.rs  test_server.rs  tunnel.rs  upnp.rs
src-tauri/src/api/: curseforge.rs  fabric.rs  forge.rs  mod.rs  modrinth.rs  mojang.rs  neoforge.rs  paper.rs  purpur.rs  quilt.rs  serverjars.rs  spiget.rs  version_sort.rs
(+277 files in other folders)
